[project]
name = "StewartPlatformSim"
version = "0.1.0"
description = "Simulate Stewart Platform by MotrixSim"
authors = [{ name = "zilch", email = "147668916@qq.com" }]
dependencies = ["motrixsim===0.1.0b2", "scipy>=1.16.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
